fixing render bugs on iphone 11

--- a/carol-portfolio/src/containers/About/About.module.scss
+++ b/carol-portfolio/src/containers/About/About.module.scss
@@ -83,11 +83,13 @@
 
   .ImageContainer {
     transition: none;
-    height: 600px;
+    height: auto;
+    overflow: visible;
   }
 
   .Image {
-    height: 280px;
+    height: auto;
+    max-width: 360px;
   }
 
   .AboutSection {
@@ -128,11 +130,13 @@
 
   .ImageContainer {
     height: auto;
+    overflow: visible;
     transition: none;
   }
 
   .Image {
-    max-width: 340px;
+    max-width: 320px;
+    height: auto;
     border-radius: 24px;
   }
 }
